I hate this question and I hate my solution even more...

--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -64,6 +64,7 @@
     <Compile Include="LengthOfLongestSubstringTest.cs" />
     <Compile Include="LongestCommonPrefixTest.cs" />
     <Compile Include="MaxSubArrayTest.cs" />
+    <Compile Include="MergeSortedArrayTest.cs" />
     <Compile Include="MergeTwoSortedListsTest.cs" />
     <Compile Include="PascalsTriangleTest.cs" />
     <Compile Include="PlusOneTest.cs" />
