--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="MergeTwoSortedListsTest.cs" />
     <Compile Include="PascalsTriangleTest.cs" />
     <Compile Include="PlusOneTest.cs" />
+    <Compile Include="ProductExceptItselfTest.cs" />
     <Compile Include="RemoveDuplicatesLLTest.cs" />
     <Compile Include="RemoveElementTest.cs" />
     <Compile Include="RomanToInTest.cs" />
