Stupid HackerRank problem

--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="LRUCacheTest.cs" />
     <Compile Include="MaxDepthOfBinaryTreeTest.cs" />
     <Compile Include="MaxSubArrayTest.cs" />
+    <Compile Include="MergeRangesTest.cs" />
     <Compile Include="MergeSortedArrayTest.cs" />
     <Compile Include="MergeTwoSortedListsTest.cs" />
     <Compile Include="PascalsTriangleTest.cs" />
