--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IsPalindromeNumberTest.cs" />
     <Compile Include="IsPalindromeTest.cs" />
     <Compile Include="IsSameTreeTest.cs" />
+    <Compile Include="IsValidSudokuTest.cs" />
     <Compile Include="LengthOfLastWordTest.cs" />
     <Compile Include="LengthOfLongestSubstringTest.cs" />
     <Compile Include="LongestCommonPrefixTest.cs" />
