--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ContainerWithMostWaterTest.cs" />
     <Compile Include="EvaluateReversePolishNotationTest.cs" />
     <Compile Include="FirstIndexOfFirstOccurrenceTest.cs" />
+    <Compile Include="HasPathSumTest.cs" />
     <Compile Include="IsPalindromeNumberTest.cs" />
     <Compile Include="IsPalindromeTest.cs" />
     <Compile Include="IsSameTreeTest.cs" />
