--- a/LeetCodeUnitTest/LeetCodeUnitTest.csproj
+++ b/LeetCodeUnitTest/LeetCodeUnitTest.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FindDuplicatesTest.cs" />
     <Compile Include="ValidParenthesisTest.cs" />
+    <Compile Include="WordPatternTest.cs" />
     <Compile Include="ZigZagConversionProblemTest.cs" />
   </ItemGroup>
   <ItemGroup>
